# BluePrint-Construction-AI-Estimator

./: .gitignore  LICENSE  README.md  START_FLASK.cmd  START_STREAMLIT.cmd  app.py  pyproject.toml  requirements.txt  run_demo.py  web_core.py  web_flask.py
.streamlit/: config.toml
data/: README.md
data/blueprints/: vector_sample.json
data/labels/: LABELING_GUIDELINES.md  labels_sample.csv
data/materials/: materials_sample.csv
notebooks/: 01_ingest_synthetic.ipynb  02_wall_graph.ipynb  03_scale_quantities.ipynb  04_materials_trees.ipynb  05_future_algorithms.ipynb
src/blueprint_estimator/: __init__.py  cost.py  features.py  ingest_raster.py  ingest_vector.py  materials_ingest.py  scale_inference.py  scale_qty.py  schemas.py  synthetic.py  train_trees.py  wall_graph_cv.py  wall_ml.py
