[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint-estimator"
version = "0.1.0"
description = "Blueprint wall graph extraction and tree-based material/cost estimation (CSUN Intro ML)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
